# encodec-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  MATRIX.md  Makefile  README.md  wrangler.toml
apple/: Package.swift  README.md
apple/Sources/CEncodecMLXBridge/include/: encodec_mlx_bridge.h
apple/Sources/EncodecMLXEncode/: main.swift
apple/Sources/EncodecMLXRuntime/: EncodecMLXRuntime.swift
apple/Tests/EncodecMLXRuntimeTests/: EncodecMLXRuntimeTests.swift
browser-smoke/: app.js  index.html  package-lock.json  package.json  serve.py  style.css  webgpu-matrix.html  webgpu-matrix.js
deploy/cloudflare/: encodec-rs-browser-smoke-worker.js
examples/: soundkit_opus_cache_to_wav.rs  soundkit_opus_packet_cache.rs
onnx-bundles/encodec_48khz_12kbps/: bundle.json  decode_frame.onnx  encode_frame.onnx  lm_logits.onnx
onnx-bundles/encodec_48khz_6kbps/: bundle.json  decode_frame.onnx  encode_frame.onnx  lm_logits.onnx
scripts/: benchmark_variants.py  build-cloudflare-browser-smoke.mjs  build_wasm_fixed_bundles.sh  create_mlx_fixed_bundles.sh  decode_mobygratis_mlx_opus_cache.sh  download-onnx-bundles.sh  encode_mobygratis_mlx.sh  export-deterministic-lm-weights.py  export-mlx-frame-archive.py  export_encodec_fixed_chunk_bundles.sh  pray4me-wasm-roundtrip.mjs  quantize-deterministic-lm-weights.py  wasm-encode-fixture.mjs  webgpu-matrix.mjs
src/: arithmetic.rs  binary.rs  deterministic_lm.rs  ecdc.rs  ecdc_presets.rs  format.rs  lib.rs  main.rs  metadata.rs  mlx_bridge.rs  onnx.rs  portable_lm.rs  quantized_lm.rs  raw.rs  stable_hash.rs  wasm.rs
tests/: ecdc_fixed_bundle_matrix.rs  mobygratis_mlx_stream.rs  onnx_fixture_roundtrip.rs
