[package]
name = "encodec-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure Rust EnCodec runtime with native ECDC encode/decode"
repository = "https://github.com/wavey-ai/encodec-rs"

[lib]
name = "encodec_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "encodec-rs"
path = "src/main.rs"

[features]
default = []
ecdc = [
    "dep:anyhow",
    "dep:crc32fast",
    "dep:libm",
    "dep:serde",
    "dep:serde_json",
]
onnx = [
    "ecdc",
    "dep:gpu-worker-ort",
    "dep:hound",
    "dep:ndarray",
]
wasm = [
    "ecdc",
    "dep:console_error_panic_hook",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = { version = "1.0.98", optional = true }
crc32fast = { version = "1.4", optional = true }
libm = { version = "0.2", optional = true }
gpu-worker-ort = { git = "https://github.com/wavey-ai/gpu-workers.git", rev = "d7fcea671a28854d263a3eb06a2be629de98af43", optional = true }
hound = { version = "3.5.1", optional = true }
ndarray = { version = "0.17.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
